1. Метод .of [#399162]